<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainscren"
    tools:context=".ui.RegisterActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageview_regAct_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/user_images_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_regAct_fullName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/full_name"
        android:inputType="text"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageview_regAct_image" />

    <EditText
        android:id="@+id/edittext_regAct_emailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_regAct_fullName" />

    <EditText
        android:id="@+id/edittext_regAct_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/address"
        android:inputType="text"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_regAct_emailAddress" />

    <TextView
        android:id="@+id/textview_regAct_birthDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_background"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:hint="@string/birth_date"
        android:textSize="18sp"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_regAct_address" />

    <Spinner
        android:id="@+id/spinner_regAct_gender"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="5dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_regAct_birthDate" />
    <ImageButton
        android:id="@+id/imageButton_loanAct_dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:focusable="true"
        android:padding="13sp"
        android:src="@drawable/ic_dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_regAct_birthDate"

        />
    <Button
        android:id="@+id/button_regAct_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_regAct_gender" />

</androidx.constraintlayout.widget.ConstraintLayout>