<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingActivity">

    <ImageButton
        android:id="@+id/imageButton_settingAct_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@null"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_settingAct_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        android:text="@string/setting"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageButton_settingAct_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_settingAct_comingSoon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/more_option_coming_soon"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_settingAct_back"
        app:layout_constraintVertical_bias="0.019"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />


    <!--    <Switch-->
    <!--        android:id="@+id/switch_settingAct_dartMode"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_margin="30dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:layout_marginRight="5dp"-->
    <!--        android:text="@string/dart_mood"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/textview_settingAct_comingSoon" />-->


    <Button
        android:id="@+id/button_settingAct_logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_settingAct_comingSoon" />

</androidx.constraintlayout.widget.ConstraintLayout>